feat: added description and keywords metadata

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="keywords" content="Ole, Midia, Marketing, Esportes, Marketing Esportivo, Olé Mídia, Imagem atleta, Futebol, Assessoria, Assessoria esportiva, Visual, Identidade, Fotografia, Edição, Vídeos, Design" />
+  <meta name="description" content="Marketing voltado para atletas. Sua imagem é o nosso plano de jogo!">
   <link rel="icon" type="image/png+xml" href="./public/Default_logo.webp" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
